--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "c:/Users/Ahmed/Documents/PlatformIO/Projects/ESP8266 DHT12 Humidity Temperature Sensor/ESP8266-DHT12/.pio/build/esp12e/firmware.elf",
+            "executable": "C:/Users/Ahmed/Documents/GitHub/ESP8266-DHT12/.pio/build/esp12e/firmware.elf",
             "projectEnvName": "esp12e",
             "toolchainBinDir": "C:/Users/Ahmed/.platformio/packages/toolchain-xtensa/bin",
             "internalConsoleOptions": "openOnSessionStart",
@@ -25,7 +25,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "c:/Users/Ahmed/Documents/PlatformIO/Projects/ESP8266 DHT12 Humidity Temperature Sensor/ESP8266-DHT12/.pio/build/esp12e/firmware.elf",
+            "executable": "C:/Users/Ahmed/Documents/GitHub/ESP8266-DHT12/.pio/build/esp12e/firmware.elf",
             "projectEnvName": "esp12e",
             "toolchainBinDir": "C:/Users/Ahmed/.platformio/packages/toolchain-xtensa/bin",
             "internalConsoleOptions": "openOnSessionStart"
@@ -34,7 +34,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "c:/Users/Ahmed/Documents/PlatformIO/Projects/ESP8266 DHT12 Humidity Temperature Sensor/ESP8266-DHT12/.pio/build/esp12e/firmware.elf",
+            "executable": "C:/Users/Ahmed/Documents/GitHub/ESP8266-DHT12/.pio/build/esp12e/firmware.elf",
             "projectEnvName": "esp12e",
             "toolchainBinDir": "C:/Users/Ahmed/.platformio/packages/toolchain-xtensa/bin",
             "internalConsoleOptions": "openOnSessionStart",
